<resources>
    <string name="app_name">SCMT_UI_MOVIL</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="entrar_con_huella">Entrar con huella</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="usuario1">Usuario</string>
    <string name="todo">TODO</string>
    <string name="josue_barrales_galvez">Josue Barrales Galvez</string>
    <string name="josue_barrales_galvez1">Josue Barrales Galvez</string>
    <string name="josue_barrales_galvez2">Josue Barrales Galvez</string>
    <string name="abraham_cocoletzi_zempoalteca">Abraham Cocoletzi Zempoalteca</string>
    <string name="almacen">Almacen</string>
    <string name="josueflowserve">josueflowserve</string>
    <string name="josue_barrales_galvez3">Josue Barrales Galvez</string>
    <string name="nombre">Nombre</string>
    <string name="usuario2">Usuario</string>
    <string name="area">Area</string>
    <string name="jefe_inmediato">Jefe inmediato</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="numero_de_empleado">Numero de empleado</string>
    <string name="_000001">000001</string>
    <string name="notificacion_3">Notificacion 3</string>
    <string name="notificacion_2">Notificacion 2</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="notificacion_1">Notificacion 1</string>
    <string name="imageqr">imageqr</string>
    <string name="registrar_asistencia">Registrar asistencia</string>
    <string name="selecciona_la_ruta">Selecciona la ruta</string>
    <string name="mostrar_qr">Mostrar QR</string>
    <string name="enviar">Enviar</string>
    <string name="prioridad">Prioridad</string>
    <string name="especificar_la_incidencia">Especificar la incidencia</string>
    <string name="ruta">Ruta</string>
    <string name="reportar_incidencias">Reportar incidencias</string>
    <string name="regresar">Regresar</string>
    <string name="ver_incidencias">Ver incidencias</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="todo1">TODO</string>
    <string name="sistema_de_control_y_monitoreo_nde_unidades_de_transporte">SISTEMA DE CONTROL Y MONITOREO\nDE UNIDADES DE TRANSPORTE</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="_2023">© 2023</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="title_activity_ubicacion_mapa">Ubicacion_mapa</string>
</resources>