<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263245"
    tools:context=".Registrar_Asistencia">

    <View
        android:id="@+id/zonaperfil3"
        android:layout_width="453dp"
        android:layout_height="87dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#202124"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="92dp"
        android:text="@string/registrar_asistencia"
        android:textColor="#4ECDE6"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="208dp"
        android:layout_height="28dp"
        android:layout_marginTop="176dp"
        android:text="@string/selecciona_la_ruta"
        android:textColor="#4ECDE6"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="358dp"
        android:layout_height="52dp"
        android:layout_marginTop="228dp"
        android:alpha="0.6"
        android:autofillHints=""
        android:background="@drawable/ct_trans_radius"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColorHint="#7986CB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="248dp"
        android:layout_height="54dp"
        android:layout_marginTop="368dp"
        android:background="@drawable/button_radius"
        android:text="@string/mostrar_qr"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="307dp"
        android:layout_height="302dp"
        android:layout_marginTop="488dp"
        android:contentDescription="@string/imageqr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/qr"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>