<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263245"
    tools:context=".Notificaciones">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="173dp"
        android:text="@string/notificacion_3"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        tools:ignore="MissingConstraints,TextSizeCheck,VisualLintOverlap" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="173dp"
        android:text="@string/notificacion_2"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/view6"
        tools:ignore="MissingConstraints,TextSizeCheck,VisualLintOverlap" />

    <View
        android:id="@+id/view6"
        android:layout_width="415dp"
        android:layout_height="91dp"
        android:layout_marginTop="176dp"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <View
        android:id="@+id/view5"
        android:layout_width="415dp"
        android:layout_height="91dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <View
        android:id="@+id/zonaperfil2"
        android:layout_width="453dp"
        android:layout_height="87dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#202124"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <View
        android:id="@+id/view4"
        android:layout_width="415dp"
        android:layout_height="91dp"
        android:layout_marginTop="267dp"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="24dp"
        android:text="@string/notificaciones"
        android:textColor="#4ECDE6"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/zonaperfil2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="173dp"
        android:text="@string/notificacion_1"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <ImageView
        android:id="@+id/regresar"
        android:layout_width="37dp"
        android:layout_height="34dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="380dp"
        app:layout_constraintEnd_toEndOf="@+id/zonaperfil2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/zonaperfil2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flechita"
        android:contentDescription="@string/regresar" />
</androidx.constraintlayout.widget.ConstraintLayout>