<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263245"
    tools:context=".Incidencias">

    <View
        android:id="@+id/zonaperfil4"
        android:layout_width="453dp"
        android:layout_height="87dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#202124"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="352dp"
        android:layout_height="241dp"
        android:layout_marginTop="488dp"
        android:alpha="0.6"
        android:autofillHints=""
        android:background="@drawable/ct_trans_radius"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColorHint="#7986CB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="358dp"
        android:layout_height="52dp"
        android:layout_marginTop="308dp"
        android:alpha="0.6"
        android:autofillHints=""
        android:background="@drawable/ct_trans_radius"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColorHint="#7986CB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="358dp"
        android:layout_height="52dp"
        android:layout_marginTop="176dp"
        android:alpha="0.6"
        android:autofillHints=""
        android:background="@drawable/ct_trans_radius"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColorHint="#7986CB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="248dp"
        android:layout_height="54dp"
        android:layout_marginTop="780dp"
        android:background="@drawable/button_radius"
        android:text="@string/enviar"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="208dp"
        android:layout_height="28dp"
        android:layout_marginTop="260dp"
        android:text="@string/prioridad"
        android:textColor="#4ECDE6"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="327dp"
        android:layout_height="33dp"
        android:layout_marginTop="416dp"
        android:text="@string/especificar_la_incidencia"
        android:textColor="#4ECDE6"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="208dp"
        android:layout_height="28dp"
        android:layout_marginTop="124dp"
        android:text="@string/ruta"
        android:textColor="#4ECDE6"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="54dp"
        android:text="@string/reportar_incidencias"
        android:textColor="#4ECDE6"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck" />

</android.support.constraint.ConstraintLayout>